[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-order-management-env"
version = "1.0.0"
description = "Production-ready restaurant kitchen management environment"
authors = [{name = "Yuvraj Chouhan", email = "ycgodgaming@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "flask",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[project.urls]
Homepage = "https://github.com/callmeuvee/restaurant-order-management-env"
Repository = "https://github.com/callmeuvee/restaurant-order-management-env"
